fluxcd/apps/base/dumbbudget/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dumbbudget
  annotations:
    linkerd.io/inject: enabled
