fluxcd/apps/base/dumbbudget/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dumbbudget
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dumbbudget
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 3000
      protocol: TCP
